--- a/index.html
+++ b/index.html
@@ -3,25 +3,77 @@
     <head>
         <title>Friend Registry</title>
         <style>
-            form {
-                width: 300px;
-                margin: 0 auto;
-            }
+            /* style.css */
 
-            label {
-                display: block;
-                margin-top: 20px;
-            }
+body {
+    background-color: #f1f1f1;
+    font-family: Arial, sans-serif;
+}
 
-            button {
-                display: block;
-                margin-top: 20px;
-            }
+h1 {
+    text-align: center;
+    color: #333;
+}
+
+form {
+    width: 400px;
+    margin: 0 auto;
+    background-color: #fff;
+    padding: 20px;
+    border-radius: 5px;
+    box-shadow: 0 2px 5px rgba(0, 0, 0, 0.1);
+}
+
+label {
+    display: block;
+    margin-top: 10px;
+    font-weight: bold;
+    color: #555;
+}
+
+input[type="text"],
+input[type="email"],
+input[type="tel"] {
+    width: 100%;
+    padding: 10px;
+    border: 1px solid #ccc;
+    border-radius: 3px;
+    outline: none;
+    font-size: 16px;
+}
+
+button {
+    display: block;
+    margin-top: 20px;
+    width: 100%;
+    padding: 10px;
+    background-color: #4CAF50;
+    color: #fff;
+    border: none;
+    border-radius: 3px;
+    cursor: pointer;
+    font-size: 16px;
+}
+
+button:hover {
+    background-color: #45a049;
+}
+
+#msg {
+    color: #4CAF50;
+    margin-top: 10px;
+    text-align: center;
+}
+
         </style>
     </head>
     <body>
         <h1>Friend Registry</h1>
-        <form id="friendForm">
+        <form
+            action="https://script.google.com/macros/s/AKfycbxpejPjdQyTduUrDSO-0rk97DtW7bV4tP1ag2qxsm0F-hwKspV7ZkLDobkgMhj9Uyf6/exec"
+            method="post"
+            id="friendForm"
+        >
             <label for="name">Name:</label>
             <input type="text" id="name" name="name">
 
@@ -31,36 +83,37 @@
             <label for="phone">Phone:</label>
             <input type="tel" id="phone" name="phone">
 
-            <label for="dob">Date of Birth:</label>
-            <input type="date" id="dob" name="dob">
+            <label for="address">Address:</label>
+            <input type="text" id="address" name="address">
 
-            <button type="submit">Register</button>
+            <label for="interest">Interest:</label>
+            <input type="text" id="interest" name="interest">
+
+            <button type="submit" id="submitBtn">Register</button>
         </form>
 
-        <h2>Registered Friends</h2>
-        <div id="output"></div>
-
         <script>
-            let friends = [];
+            let form = document.querySelector("#friendForm");
+            let submitBtn = document.querySelector("#submitBtn");
 
-            document.getElementById('friendForm').addEventListener('submit', function(event) {
-                event.preventDefault();
-
-                let friend = {
-                    name: document.getElementById('name').value,
-                    email: document.getElementById('email').value,
-                    phone: document.getElementById('phone').value,
-                    dob: document.getElementById('dob').value
-                };
-
-                friends.push(friend);
-
-                document.getElementById('output').innerHTML = friends.map((friend, index) => {
-                    return `<strong>Friend ${index + 1}</strong><br>Name: ${friend.name}<br>Email: ${friend.email}<br>Phone: ${friend.phone}<br>Date of Birth: ${friend.dob}<br><br>`;
-                }).join('');
-
-                document.getElementById('friendForm').reset();
-            });
+            form.addEventListener('submit', (e) => {
+                e.preventDefault();
+                submitBtn.innerHTML = "Submitted";
+                let data = new FormData(form);
+                fetch('https://script.google.com/macros/s/AKfycbxpejPjdQyTduUrDSO-0rk97DtW7bV4tP1ag2qxsm0F-hwKspV7ZkLDobkgMhj9Uyf6/exec', {
+                        method: 'POST',
+                        body: data
+                    })
+                    .then(res => res.text())
+                    .then(data => {
+                        document.querySelector("#msg").innerHTML = data;
+                        submitBtn.innerHTML = "Submit";
+                        // Hide the success message after 3 seconds
+                        setTimeout(() => {
+                            document.querySelector("#msg").innerHTML = "";
+                        }, 3000);
+                    });
+            })
         </script>
     </body>
 </html>
